--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea/workspace.xml
 node_modules/
 package-lock.json
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
